src/index.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

section {
  padding-top: 2vh;
}
.space {
  padding: 2vh;
}

.home-section {
  padding-top: 2vh;
  width: 100%;
  background-color: #32292f;
  display: flex;
  /* makes it mobile friendly */
  flex-wrap: wrap;
  overflow: hidden;
  align-items: center;
  justify-content: center;
}

.home-section h1 {
  margin-left: 10vh;
  margin-right: 10vh;
  font-size: 1.5em;
  text-align: center;
  color: #f0f7f4;
  font-family: 'Poppins', sans-serif;
}

em {
  font-style: normal;
  font-size: 1.5em;
  text-transform: uppercase;
  color: #99e1d9;
}
.project-section {
  border-top: 3px solid #99e1d9;
  border-bottom: 3px solid #99e1d9;
  background-color: #32292f;
  padding: 8vh;
  /* makes it mobile friendly */
  flex-wrap: wrap;
}

.project-section h1 {
  font-style: normal;
  font-size: 2.5em;
  text-transform: uppercase;
  color: #99e1d9;
  text-align: center;
}

.contact-section {
  border-top: 3px solid #99e1d9;
  border-bottom: 3px solid #99e1d9;
  background-color: #32292f;
  width: 100%;
  flex-wrap: wrap;
  align-items: center;
}

.contact-section h1 {
  margin-left: 10vh;
  margin-right: 10vh;
  font-size: 1.5em;
  text-align: center;
  color: #f0f7f4;
  font-family: 'Poppins', sans-serif;
}

.contact-section h2 {
  font-style: normal;
  font-size: 2.5em;
  text-transform: uppercase;
  color: #99e1d9;
  text-align: center;
}
.contact-section-icons {
  justify-content: space-between;
  padding-bottom: 5vh;
  text-align: center;
  align-items: center;
  color: white;
  flex-wrap: wrap;
}

.navbar {
  background-color: #99e1d9;
  margin-bottom: -15px;
}

nav ul {
  list-style-type: none; /*makes sure no bullets are visible*/
  font-size: 12px;
  font-weight: 900;
  text-align: center;
  padding: 40px;
}

a {
  display: inline-block;
  padding: 0.5rem;
  margin: 0.5rem;
  width: 13rem;
  border: 2px solid white;
  text-align: center;
  font-family: 'Poppins', sans-serif;
  color: black;
}

.footer-section {
  width: 100%;
  flex-wrap: wrap;
  background-color: #99e1d9;
  justify-content: center;
  text-align: center;
  align-items: center;
}

:root {
  --magic-number: 0.09719; /* tan(11°)/2 */
  --content-width: 50vw;
  --skew-padding: calc(var(--content-width) * var(--magic-number));
}

@media screen and (min-width: 42em) {
  :root {
    --content-width: 42em;
  }
}

